fix: working on list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ Extra-large     xl	        ≥1200px
 Ex-ex-large	    xxl	        ≥1400px 
 *************************************/
 
-*{
-    /* border: 1px solid red; */
+.red{
+    border: 1px solid red;
 }
 
 html{
