--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,13 @@ Extra-large     xl	        ≥1200px
 Ex-ex-large	    xxl	        ≥1400px 
 *************************************/
 
-.red{
-    border: 1px solid red;
-}
-
 html{
     font-family: sans-serif;
+}
+
+
+*{
+    /* border: 1px solid red; */
 }
 
 :root{
@@ -29,10 +30,21 @@ html{
     --color-icon-white: #ffffff;
 }
 
+body{
+    background-color: var(--bg-body);
+}
+
 .im-round{
     border-radius: 20px;
 }
 
 .im-rounder{
     border-radius: 40px;
+}
+
+main #sidebar{
+    background-image: url(../img/sidebar-bg.png);
+    background-color: var(--bg-sidebar);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
