--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,7 @@ main #sidebar{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+#blue-section{
+    background-color: var(--bg-section);
+}
