--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ html{
 
 :root{
     --bg-body: #F8F9FB;
-    --bg-section: #1B72E8;
+    --bg-section: #1b72e8;
     --bg-icon: #165BBA;
     --bg-sidebar: #051e34;
     --bg-searchbar: #E5E5E5;
