fixed the entire main section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ main #sidebar{
     background-color: var(--bg-section);
 }
 
-.fa-pencil,
-.fa-trash{
-    color: var(--color-icon-grey);
+#sidebar li:hover,
+#gear:hover{
+    background-color: var(--bg-icon);
 }
